Legger til støtte for å sende brev til virksomhet